<resources>
    <string name="app_name">Zone Tasker</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="message">Message</string>
    <string name="message_description">Send a message when geofence is triggered</string>
    <string name="phone_number">Phone number</string>
    <string name="reminder">Reminder</string>
    <string name="reminderText">Reminder text</string>
    <string name="settings">Settings</string>
    <string name="optionsToolbar">Setup</string>
    <string name="mapToolbar">Select a zone</string>
    <string name="geofenceMapToolbar">Zone map</string>
    <string name="geofenceMapToolbarSubtitle">Map of all defined zones</string>
    <string name="goToMainMenu">Go to Menu</string>
    <string name="trigger">Trigger when</string>
    <string-array name="trigger_list">
        <item name="entering">Entering</item>
        <item name="exiting">Exiting</item>
    </string-array>
</resources>